# few-shot-spoken-term-classification

./: README.md  pyproject.toml
few_shot_spoken_term_classification/: FewShotSpokenTermClassification.py  __init__.py
